--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8,16 +8,37 @@ h1.page-header {
   font-family: 'Josefin Slab', serif;
 }
 
-h3.item > a {
-  text-transform: uppercase;
-  font-size: 20px;
-  letter-spacing: 1px;
+h1.page-header > a:hover {
+  opacity: 0.9;
+  text-decoration: none;
+}
+
+h1.page-header > a:focus {
+  color: #111;
+  text-decoration: none;
 }
 
 .contact {
   font-family: 'Josefin Sans', sans-serif;
   font-size: 20px;
   letter-spacing: 1.5px;
+  font-weight: bold;
+}
+
+.contact:hover {
+  opacity: 0.9;
+  text-decoration: none;
+}
+
+.contact:focus {
+  color: #111;
+  text-decoration: none;
+}
+
+h3.item > a {
+  text-transform: uppercase;
+  font-size: 20px;
+  letter-spacing: 1px;
 }
 
 .portfolio-item {
