--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,6 +3,10 @@ body {
   font-family: 'Josefin Sans', sans-serif;
 }
 
+#logo {
+  max-height: 50px;
+}
+
 h1.page-header {
   font-family: 'Josefin Slab', serif;
 }
