--- a/static/css/main.css
+++ b/static/css/main.css
@@ -21,7 +21,10 @@ h1.page-header > a:focus {
   font-family: 'Josefin Sans', sans-serif;
   font-size: 20px;
   letter-spacing: 1.5px;
-  font-weight: bold;
+}
+
+.contact-wrap {
+  padding-top: 20px;
 }
 
 .contact:hover {
@@ -58,4 +61,17 @@ a:hover {
 
 .btn-primary {
   padding-top: 10px;
+}
+
+#logo {
+  max-height: 70px;
+}
+
+@media (max-width: 768px) {
+  #logo {
+    max-height: 50px;
+  }
+  .contact-wrap {
+    padding-top: 0px;
+  }
 }
