--- a/static/css/main.css
+++ b/static/css/main.css
@@ -67,6 +67,10 @@ a:hover {
   max-height: 70px;
 }
 
+.gallery-image {
+  padding-bottom: 15px;
+}
+
 @media (max-width: 768px) {
   #logo {
     max-height: 50px;
@@ -75,3 +79,4 @@ a:hover {
     padding-top: 0px;
   }
 }
+
