--- a/static/partials/item.html
+++ b/static/partials/item.html
@@ -5,7 +5,7 @@
         <img class="img-responsive" ng-src="/images/portfolio/{{ item.url }}.jpg" alt="">
       </a>
     </div>
-    <div class="gallery-image" ng-repeat="i in item.images">
+    <div class="gallery-image" ng-repeat="i in item.gallery">
       <a ng-href="{{ i }}">
         <img class="img-responsive" ng-src="{{ i }}" alt="">
       </a>
