--- a/static/partials/item.html
+++ b/static/partials/item.html
@@ -14,7 +14,7 @@
   <div class="col-md-4">
     <h3 class="page-header">{{ item.name }}</h3>
     <p>
-      Various Papyrus products I have worked on as a Graphic Designer / Product Design Specialist
+      {{ item.description }}
     </p>
   </div>
 </div>
